Adding PropertiesConfigurationTest