@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2007-2017 MetaSolutions AB
+ * Copyright (c) 2007-2025 MetaSolutions AB
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -47,7 +47,7 @@ import java.util.Properties;
  *
  * <p>
  * See the static methods of the class Configurations for wrappers around the
- * Config interface, e.g. to get synchronized view of the object.
+ * Config interface, e.g., to get synchronized view of the object.
  *
  * <p>
  * If a key maps only to one value, it is done the standard way:<br>
@@ -107,7 +107,7 @@ public class PropertiesConfiguration implements Config {
 
 	private void checkFirePropertyChange(String key, Object oldValue, Object newValue) {
 		if ((oldValue == null) && (newValue != null)) {
-			pcs.firePropertyChange(key, oldValue, newValue);
+			pcs.firePropertyChange(key, null, newValue);
 		} else if ((oldValue != null) && (!oldValue.equals(newValue))) {
 			pcs.firePropertyChange(key, oldValue, newValue);
 		}
@@ -221,9 +221,11 @@ public class PropertiesConfiguration implements Config {
 	public void load(URL configURL) throws IOException {
 		InputStreamReader isr = null;
 		try {
-			URL escapedURL = new URL(configURL.toString().replaceAll(" ", "%20"));
+			URL escapedURL = new URI(configURL.toString().replaceAll(" ", "%20")).toURL();
 			isr = new InputStreamReader(escapedURL.openStream(), StandardCharsets.UTF_8);
 			config.load(isr);
+		} catch (URISyntaxException e) {
+			log.error(e.getMessage());
 		} finally {
 			if (isr != null) {
 				isr.close();
@@ -235,9 +237,9 @@ public class PropertiesConfiguration implements Config {
 	public void save(URL configURL) throws IOException {
 		try {
 			String escapedURL = configURL.toString().replaceAll(" ", "%20");
-			URI url = new URI(escapedURL.toString());
+			URI url = new URI(escapedURL);
 			File file = new File(url);
-			OutputStreamWriter output = new OutputStreamWriter(Files.newOutputStream(file.toPath()), "UTF-8");
+			OutputStreamWriter output = new OutputStreamWriter(Files.newOutputStream(file.toPath()), StandardCharsets.UTF_8);
 			config.store(output, configName);
 			output.close();
 		} catch (URISyntaxException e) {
@@ -309,7 +311,7 @@ public class PropertiesConfiguration implements Config {
 
 	@Override
 	public void setProperty(String key, Object value) {
-		String oldValue = null;
+		String oldValue;
 		oldValue = getString(key);
 		config.setProperty(key, value.toString());
 		setModified(true);
@@ -347,7 +349,7 @@ public class PropertiesConfiguration implements Config {
 	@Override
 	public List<String> getKeyList(String prefix) {
 		Enumeration keyIterator = config.propertyNames();
-		ArrayList<String> result = new ArrayList<String>();
+		ArrayList<String> result = new ArrayList<>();
 
 		while (keyIterator.hasMoreElements()) {
 			String next = (String) keyIterator.nextElement();
@@ -421,7 +423,7 @@ public class PropertiesConfiguration implements Config {
 	@Override
 	public byte getByte(String key, byte defaultValue) {
 		String strValue = config.getProperty(key);
-		byte byteValue = 0;
+		byte byteValue;
 
 		if (strValue != null) {
 			byteValue = Byte.parseByte(strValue);
@@ -447,7 +449,7 @@ public class PropertiesConfiguration implements Config {
 	@Override
 	public double getDouble(String key, double defaultValue) {
 		String strValue = config.getProperty(key);
-		double doubleValue = 0;
+		double doubleValue;
 
 		if (strValue != null) {
 			doubleValue = Double.parseDouble(strValue);
@@ -473,8 +475,7 @@ public class PropertiesConfiguration implements Config {
 	@Override
 	public float getFloat(String key, float defaultValue) {
 		String strValue = config.getProperty(key);
-		float floatValue = 0;
-
+		float floatValue;
 
 		if (strValue != null) {
 			floatValue = Float.parseFloat(strValue);
@@ -500,7 +501,7 @@ public class PropertiesConfiguration implements Config {
 	@Override
 	public int getInt(String key, int defaultValue) {
 		String strValue = config.getProperty(key);
-		int intValue = 0;
+		int intValue;
 
 		if (strValue != null) {
 			intValue = Integer.parseInt(strValue);
@@ -526,7 +527,7 @@ public class PropertiesConfiguration implements Config {
 	@Override
 	public long getLong(String key, long defaultValue) {
 		String strValue = config.getProperty(key);
-		long longValue = 0;
+		long longValue;
 
 		if (strValue != null) {
 			longValue = Long.parseLong(strValue);
@@ -552,7 +553,7 @@ public class PropertiesConfiguration implements Config {
 	@Override
 	public short getShort(String key, short defaultValue) {
 		String strValue = config.getProperty(key);
-		short shortValue = 0;
+		short shortValue;
 
 		if (strValue != null) {
 			shortValue = Short.parseShort(strValue);
@@ -589,15 +590,15 @@ public class PropertiesConfiguration implements Config {
 		try {
 			String uri = config.getProperty(key);
 			if (uri != null) {
-				return new URL(uri);
+				return new URI(uri).toURL();
 			}
-		} catch (MalformedURLException ignored) {
+		} catch (URISyntaxException | MalformedURLException ignored) {
 		}
 		return null;
 	}
 
     @Override
-		public URL getURL(String key, URL defaultValue) {
+	public URL getURL(String key, URL defaultValue) {
 		URL result = getURL(key);
 		if (result == null) {
 			return defaultValue;
@@ -606,7 +607,7 @@ public class PropertiesConfiguration implements Config {
     }
 
     @Override
-		public Color getColor(String key) {
+	public Color getColor(String key) {
 		Color result = null;
 		String value = getString(key);
 
@@ -666,8 +667,7 @@ public class PropertiesConfiguration implements Config {
 		if (durationString == null) {
 			return Duration.ofMillis(defaultValue);
 		}
-		Duration duration = DurationStyle.detectAndParse(durationString);
-		return duration;
+		return DurationStyle.detectAndParse(durationString);
 	}
 
 	@Override
